correccion ultimas comparacion