@@ -19,8 +19,7 @@
 
     <properties>
         <java.version>25</java.version>
-        <lombok.version>1.18.42</lombok.version>
-        <modelmapper.version>3.2.2</modelmapper.version>
+        <lombok.version>1.18.36</lombok.version> <modelmapper.version>3.2.2</modelmapper.version>
         <springdoc.version>2.7.0</springdoc.version>
         
         <maven.compiler.source>25</maven.compiler.source>
@@ -28,7 +27,7 @@
 
         <sonar.host.url>http://localhost:9000</sonar.host.url>
         <sonar.java.source>25</sonar.java.source>
-        <sonar.exclusions>**/util/**,**/config/**,**/model/**</sonar.exclusions>
+        <sonar.exclusions>**/util/**,**/config/**,**/model/**,**/dto/**</sonar.exclusions>
     </properties>
 
     <dependencies>
@@ -44,13 +43,19 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
 
         <dependency>
@@ -95,6 +100,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <jvmArguments>--enable-preview</jvmArguments>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
@@ -120,7 +126,7 @@
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
                         </path>
-                        <path>
+                         <path>
                             <groupId>org.hibernate.orm</groupId>
                             <artifactId>hibernate-jpamodelgen</artifactId>
                             <version>6.6.1.Final</version>
